skill implementation started

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "test-index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -10,10 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ask-sdk-core": "^2.4.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "pulselabs-sdk": "^1.0.1",
-    "request": "^2.88.0"
+    "pulselabs-sdk": "^1.0.2",
   }
 }
