--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "pulselabs-sdk": "^1.0.2",
+    "pulselabs-sdk": "^1.0.2"
   }
 }
