--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 //registry.npmjs.org/:_authToken=2ae4dab7-aa4b-4a01-9c08-72ab112083b4
-//ec2-54-80-130-189.compute-1.amazonaws.com:4873/:_authToken=${NPM_TOKEN}
+//ec2-54-80-130-189.compute-1.amazonaws.com:4873/:_authToken=q9rs6OmxDqdE9dwHjH8KQ8IQBgMGcUh4XYmFY/7DwFg=
 
