--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "random-name-sdk": "^0.0.15"
+    "random-name-sdk": "0.0.28"
   }
 }
